--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         .logo {
             max-width: 100%;
             padding: 40px;
+            padding-right: 60px;
         }
 
         .container {
